--- a/Kalfire 1_XR.60/Kalfire 1_XR.60.html
+++ b/Kalfire 1_XR.60/Kalfire 1_XR.60.html
@@ -13,7 +13,7 @@
     <style type="text/css">
       body { -ms-touch-action: none; }
     </style>
-    <script type="text/javascript" src="Kalfire 1_XR.60/files/KeyShotXR.js"></script>
+    <script type="text/javascript" src="Kalfire 1_XR.60/Kalfire 1_XR.60/files/KeyShotXR.js"></script>
     <script type="text/javascript">
       var keyshotXR;
 
@@ -44,7 +44,7 @@
         var uReverse = false;
         var vReverse = false;
         var hotspots = {};
-        
+
         keyshotXR = new keyshotXR(nameOfDiv,folderName,viewPortWidth,viewPortHeight,backgroundColor,uCount,vCount,uWrap,vWrap,uMouseSensitivity,vMouseSensitivity,uStartIndex,vStartIndex,minZoom,maxZoom,rotationDamping,downScaleToBrowser,addDownScaleGUIButton,downloadOnInteraction,imageExtension,showLoading,loadingIcon,allowFullscreen,uReverse,vReverse,hotspots);
       }
 
